--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .slider {
   position: relative;
   width: 100vw;
@@ -9,9 +13,9 @@
 }
 
 .slide {
-  flex: 0 0 100%;
   box-sizing: border-box;
   padding: 1rem;
+  flex: 0 0 100%;
 }
 
 .slide-btn {
@@ -24,6 +28,7 @@
   font-size: 2rem;
   padding: 0 .5rem;
   cursor: pointer;
+  z-index: 10;
 }
 
 .prev { 
