--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,3 +186,39 @@ footer {
     border: 1px solid black;
     border-radius: 5px;
 }
+
+@media (max-width: 800px) {
+    .slide {
+        padding: 0.5rem;
+        flex: 0 0 100%;
+    }
+    .slide-btn {
+        font-size: 1.5rem;
+        padding: 0 0.3rem;
+    }
+    .filter-group {
+        display: block;
+        margin-bottom: 1rem;
+    }
+    .filters-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .filter-btn {
+        width: 100%;
+        font-size: 13px;
+        padding: 8px 16px;
+    }
+    .dropdown-content {
+        min-width: 100%;
+    }
+    header,
+    footer {
+        padding: 20px;
+        text-align: center;
+    }
+    svg {
+        width: 100%;
+    }
+}
